force-app/main/default/objects/RC_event__c/RC_event__c.object-meta.xml
<CustomObject>
    <description>An event refers to a placement drive ina  campus which can have even a pooled campus drive.</description>
    <label>RC_event</label>
    <nameField>
        <label>RC_event Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>RC_events</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>