force-app/main/default/objects/RC_event__c/fields/event_id__c.field-meta.xml
<CustomField>
    <fullName>event_id__c</fullName>
    <label>event_id</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>