force-app/main/default/objects/RC_event__c/fields/event_location__c.field-meta.xml
<CustomField>
    <fullName>event_location__c</fullName>
    <label>event_location</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>